<resources>
    <string name="app_name">Remind Me</string>
    <string name="app_label">Remind Me</string>

    <string name="dialog_positive">Set</string>
    <string name="dialog_negative">Cancel</string>
    <string name="btn_edit">&#160;Edit</string>
    <string name="btn_delete">Delete</string>


    <string name="tab_text_1">Active</string>
    <string name="tab_text_3">Finished</string>

    <string name="hint_reminder_name">Give a name …</string>
    <string name="hint_reminder_note">Extra notes for reminder …</string>
    <string name="btn_save">Set Reminder</string>
    <string name="btn_time">Set Time</string>
    <string name="btn_date">Set Date</string>
    <string name="btn_repeat">Repeat</string>

    <string name="repeat_off">Off</string>
    <string name="repeat_hourly">Hourly</string>
    <string name="repeat_daily">Daily</string>
    <string name="repeat_daily_custom">Weekdays</string>
    <string name="repeat_weekly">Weekly</string>
    <string name="repeat_weekly_custom">Weeks of month</string>
    <string name="repeat_monthly">Monthly</string>
    <string name="repeat_monthly_custom">Months of year</string>
    <string name="repeat_yearly">Yearly</string>

    <string name="repeat_daily_custom_mon">Monday</string>
    <string name="repeat_daily_custom_tue">Tuesday</string>
    <string name="repeat_daily_custom_wed">Wednesday</string>
    <string name="repeat_daily_custom_thu">Thursday</string>
    <string name="repeat_daily_custom_fri">Friday</string>
    <string name="repeat_daily_custom_sat">Saturday</string>
    <string name="repeat_daily_custom_sun">Sunday</string>

    <string name="repeat_weekly_custom_week1">On 1st %s of month</string>
    <string name="repeat_weekly_custom_week2">On 2nd %s of month</string>
    <string name="repeat_weekly_custom_week3">On 3rd %s of month</string>
    <string name="repeat_weekly_custom_week4">On 4th %s of month</string>
    <string name="repeat_weekly_custom_week5">On 5th %s of month</string>

    <string name="repeat_monthly_custom_jan">January</string>
    <string name="repeat_monthly_custom_feb">February</string>
    <string name="repeat_monthly_custom_mar">March</string>
    <string name="repeat_monthly_custom_apr">April</string>
    <string name="repeat_monthly_custom_may">May</string>
    <string name="repeat_monthly_custom_jun">June</string>
    <string name="repeat_monthly_custom_jul">July</string>
    <string name="repeat_monthly_custom_aug">August</string>
    <string name="repeat_monthly_custom_sep">September</string>
    <string name="repeat_monthly_custom_oct">October</string>
    <string name="repeat_monthly_custom_nov">November</string>
    <string name="repeat_monthly_custom_dec">December</string>

    <string name="btn_vibrate">Vibrate</string>
    <string name="btn_alarm_sound">Alarm tone</string>
    <string name="btn_snooze">Snooze</string>

    <string name="snooze_heading">Reminder Snooze</string>
    <string name="snooze_interval_heading">Interval</string>
    <string name="snooze_interval_m5">5 Minutes</string>
    <string name="snooze_interval_m10">10 Minutes</string>
    <string name="snooze_interval_m15">15 Minutes</string>
    <string name="snooze_interval_m30">30 Minutes</string>

    <string name="snooze_repeat_r3">3 Times</string>
    <string name="snooze_repeat_r5">5 Times</string>
    <string name="snooze_repeat_rc">Continuously</string>
    <string name="add_new_reminder">Add New Reminder</string>
    <string name="reminder_snooze_menu_caption">Snooze</string>
    <string name="btn_alarm_action_dismiss">Dismiss</string>

    <string name="snooze_repeat_heading">Repeat</string>

    <string name="new_reminder_heading">Set New Reminder</string>
    <string name="view_reminder_heading">Viewing Reminder</string>
    <string name="edit_reminder_heading">Updating Reminder</string>
    <string name="heading_calculated_alarm_time">First alert will raise on</string>
    <string name="increase_volume_gradually_label">Auto increase volume</string>
    <string name="alarm_volume_label">Alarm volume</string>
    <string name="repeat_other">Other</string>
    <string name="search_bar_hint">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="activitySettingsTitle">Settings</string>
    <string name="activityAboutAppTitle">About App</string>
    <array name="first_day_of_week_options">
        <item>
            Sunday
        </item>
        <item>
            Monday
        </item>
        <item>
            Saturday
        </item>
    </array>
    <array name="ring_durations">
        <item>
            1
            minute
        </item>
        <item>
            2
            minute
        </item>
        <item>
            3
            minute
        </item>
    </array>
    <array name="vibration_patterns">
        <item>
            Basic
        </item>
        <item>
            Heartbeat
        </item>
        <item>
            Ticktock
        </item>
        <item>
            Waltz
        </item>
        <item>
            Zig
            Zig
            Zig
        </item>
    </array>
    <array name="themes">
        <item>
            Black
        </item>
        <item>
            Light
        </item>
    </array>
    <array name="date_formats">
        <item>
            dd
            LLL
            yy
        </item>
        <item>
            dd
            LLL
            yyyy
        </item>
        <item>
            LLL
            dd,
            yy
        </item>
        <item>
            LLL
            dd,
            yyyy
        </item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="missed_on">Missed on</string>
    <string name="missingImageDesc">oops</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">
        Hello
        blank
        fragment
    </string>
    <string name="character_limit_warning_label">%d character%s available</string>
    <string name="time_list_label">Other Times of day</string>
    <string name="reminder_expired_label">Expired</string>
    <string name="reminder_input_ring_duration_label">Ring duration</string>
</resources>