<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_jan"
            android:layout_width="match_parent"
            app:buttonTint="?attr/themeCuriosityColor"
            android:layout_height="wrap_content"
            android:text="@string/repeat_monthly_custom_jan" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_feb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="?attr/themeCuriosityColor"
            android:text="@string/repeat_monthly_custom_feb" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_mar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="?attr/themeCuriosityColor"
            android:text="@string/repeat_monthly_custom_mar" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_apr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="?attr/themeCuriosityColor"
            android:text="@string/repeat_monthly_custom_apr" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_may"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="?attr/themeCuriosityColor"
            android:text="@string/repeat_monthly_custom_may" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_jun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="?attr/themeCuriosityColor"
            android:text="@string/repeat_monthly_custom_jun" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_jul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorCuriosityLight"
            android:text="@string/repeat_monthly_custom_jul" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_aug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="?attr/themeCuriosityColor"
            android:text="@string/repeat_monthly_custom_aug" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_sep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="?attr/themeCuriosityColor"
            android:text="@string/repeat_monthly_custom_sep" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_oct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="?attr/themeCuriosityColor"
            android:text="@string/repeat_monthly_custom_oct" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_nov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="?attr/themeCuriosityColor"
            android:text="@string/repeat_monthly_custom_nov" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_monthly_dec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="?attr/themeCuriosityColor"
            android:text="@string/repeat_monthly_custom_dec" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>

