<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chk_monthly_jan"
            android:layout_width="match_parent"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:layout_height="wrap_content"
            android:text="@string/repeat_monthly_custom_jan"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_feb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_feb"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_mar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_mar"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_apr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_apr"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_may"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_may"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_jun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_jun"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_jul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_jul"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_aug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_aug"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_sep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_sep"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_oct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_oct"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_nov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_nov"></CheckBox>

        <CheckBox
            android:id="@+id/chk_monthly_dec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_warning"
            android:text="@string/repeat_monthly_custom_dec"></CheckBox>

    </LinearLayout>

</ScrollView>

