<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_16"
    android:orientation="vertical">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_reminder_snooze_enabled"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/text_light_black1"
        android:textSize="@dimen/font_size_h1"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/snooze_heading">
    </androidx.appcompat.widget.SwitchCompat>

    <RadioGroup android:id="@+id/rg_snooze_interval_options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:gravity="center"
    android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_light_black2"
            android:textSize="@dimen/font_size_h1"
            android:text="@string/snooze_interval_heading">
        </TextView>
        <RadioButton android:id="@+id/rdo_reminder_snooze_m5"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_light_black1"
            android:text="@string/snooze_interval_m5" />
        <RadioButton android:id="@+id/rdo_reminder_snooze_m10"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_light_black1"
            android:text="@string/snooze_interval_m10" />
        <RadioButton android:id="@+id/rdo_reminder_snooze_m15"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_light_black1"
            android:text="@string/snooze_interval_m15" />
        <RadioButton android:id="@+id/rdo_reminder_snooze_m30"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_light_black1"
            android:text="@string/snooze_interval_m30" />
    </RadioGroup>

    <RadioGroup android:id="@+id/rg_snooze_repeat_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_light_black2"
            android:textSize="@dimen/font_size_h1"
            android:text="@string/snooze_repeat_heading">
        </TextView>
        <RadioButton android:id="@+id/rdo_reminder_snooze_r3"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_light_black1"
            android:text="@string/snooze_repeat_r3" />
        <RadioButton android:id="@+id/rdo_reminder_snooze_r5"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_light_black1"
            android:text="@string/snooze_repeat_r5" />
        <RadioButton android:id="@+id/rdo_reminder_snooze_rc"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_light_black1"
            android:text="@string/snooze_repeat_rc" />
    </RadioGroup>

</LinearLayout>

</ScrollView>

