<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chk_monthly_jan"
            android:layout_width="match_parent"
            android:textColor="?attr/soothingText"
            app:buttonTint="@color/bg_info"
            android:textSize="@dimen/font_size_medium"
            android:layout_height="wrap_content"
            android:text="@string/repeat_monthly_custom_jan" />

        <CheckBox
            android:id="@+id/chk_monthly_feb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_feb" />

        <CheckBox
            android:id="@+id/chk_monthly_mar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_mar" />

        <CheckBox
            android:id="@+id/chk_monthly_apr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_apr" />

        <CheckBox
            android:id="@+id/chk_monthly_may"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_may" />

        <CheckBox
            android:id="@+id/chk_monthly_jun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_jun" />

        <CheckBox
            android:id="@+id/chk_monthly_jul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_jul" />

        <CheckBox
            android:id="@+id/chk_monthly_aug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_aug" />

        <CheckBox
            android:id="@+id/chk_monthly_sep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_sep" />

        <CheckBox
            android:id="@+id/chk_monthly_oct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_oct" />

        <CheckBox
            android:id="@+id/chk_monthly_nov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_nov" />

        <CheckBox
            android:id="@+id/chk_monthly_dec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/soothingText"
            android:textSize="@dimen/font_size_medium"
            app:buttonTint="@color/bg_info"
            android:text="@string/repeat_monthly_custom_dec" />

    </LinearLayout>

</ScrollView>

