<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chk_daily_sun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_info"
            android:text="@string/repeat_daily_custom_sun"></CheckBox>

        <CheckBox
            android:id="@+id/chk_daily_mon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_info"
            android:text="@string/repeat_daily_custom_mon"></CheckBox>

        <CheckBox
            android:id="@+id/chk_daily_tue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_info"
            android:text="@string/repeat_daily_custom_tue"></CheckBox>

        <CheckBox
            android:id="@+id/chk_daily_wed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_info"
            android:text="@string/repeat_daily_custom_wed"></CheckBox>

        <CheckBox
            android:id="@+id/chk_daily_thu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_info"
            android:text="@string/repeat_daily_custom_thu"></CheckBox>

        <CheckBox
            android:id="@+id/chk_daily_fri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_info"
            android:text="@string/repeat_daily_custom_fri"></CheckBox>

        <CheckBox
            android:id="@+id/chk_daily_sat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray1"
            android:buttonTint="@color/bg_info"
            android:text="@string/repeat_daily_custom_sat"></CheckBox>

    </LinearLayout>

</ScrollView>

