<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:layout_gravity="center_horizontal"
        android:minWidth="320dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_weekly_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_weekly_custom_week1"
            app:buttonTint="?attr/themeWarningColor" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_weekly_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_weekly_custom_week2"
            app:buttonTint="?attr/themeWarningColor" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_weekly_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_weekly_custom_week3"
            app:buttonTint="?attr/themeWarningColor" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_weekly_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_weekly_custom_week4"
            app:buttonTint="?attr/themeWarningColor" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_weekly_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_weekly_custom_week5"
            app:buttonTint="?attr/themeWarningColor" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>

