<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/appbar_padding"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reminder_repeat_none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat_none">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reminder_repeat_hourly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat_hourly">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reminder_repeat_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat_daily">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reminder_repeat_monthly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat_monthly">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reminder_repeat_yearly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat_yearly">
    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>